testcases/semantic/invalid/test.rs
/*
Test Package: Semantic-1
Test Target: basic
Author: Wenxin Zheng
Time: 2025-08-08
Verdict: Fail
Comment: basic test, underscore placeholder in function return position
*/

fn determinant() -> i32 {
    _
}
fn main() {}
